[gd_scene load_steps=4 format=3 uid="uid://bkk0ysl24tloo"]

[ext_resource type="Script" uid="uid://2qcc21iuautp" path="res://scripts/heads_up_display.gd" id="1_jcvpm"]

[sub_resource type="SystemFont" id="SystemFont_2n6sv"]

[sub_resource type="LabelSettings" id="LabelSettings_mw38o"]
font = SubResource("SystemFont_2n6sv")
font_size = 24
outline_color = Color(0, 0, 0, 1)

[node name="HeadsUpDisplay" type="CanvasLayer"]
script = ExtResource("1_jcvpm")

[node name="armor" type="Label" parent="."]
offset_left = 13.0
offset_top = 12.0
offset_right = 33.0
offset_bottom = 46.0
text = "0"
label_settings = SubResource("LabelSettings_mw38o")

[node name="arm1" type="ColorRect" parent="."]
offset_left = 43.0
offset_top = 9.0
offset_right = 83.0
offset_bottom = 49.0

[node name="arm2" type="ColorRect" parent="."]
offset_left = 100.0
offset_top = 9.0
offset_right = 140.0
offset_bottom = 49.0

[node name="arm3" type="ColorRect" parent="."]
offset_left = 157.0
offset_top = 9.0
offset_right = 197.0
offset_bottom = 49.0

[node name="arm4" type="ColorRect" parent="."]
offset_left = 213.0
offset_top = 9.0
offset_right = 253.0
offset_bottom = 49.0

[node name="arm5" type="ColorRect" parent="."]
offset_left = 270.0
offset_top = 9.0
offset_right = 310.0
offset_bottom = 49.0

[node name="arm6" type="ColorRect" parent="."]
offset_left = 327.0
offset_top = 9.0
offset_right = 367.0
offset_bottom = 49.0
